--- a/index.html
+++ b/index.html
@@ -358,49 +358,16 @@ Projects
 
     <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js">
 
+
+
     </script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/kineticjs/5.2.0/kinetic.min.js"></script>
 
-    <script>
-
-        const Texts = [
-
-            'HTML', 'CSS', 'ANGULAR',
-
-            'JAVA', 'JAVASCRIPT',
-
-            'PYTHON', 'SASS', 'UNIX', 'PUTTY', 'WINSCP', 'BOOTSTRAP', 'JSON', 'GIT', 'TYPESCRIPT', 'SVN',
-
-            'NEO4J', 'SPRINGBOOT', 'DSA', 'MYSQL', 'JQUERY',];
-
-
-        var tagCloud = TagCloud('.Sphere', Texts, {
-
-            // Sphere radius in px
-
-            radius: 200,
-           
-
-            // animation speed
-
-            // slow, normal, fast
-
-            maxSpeed: 'fast', initSpeed: 'fast',
-
-            // Rolling direction [0 (top), 90 (left), 135 (right-bottom)] direction: 135, 
-
-            // interaction with mouse or not [Default true (decelerate to rolling init speed, and keep rolling with mouse).] keep: true
-
-        });
-
-        var color = '#40b0bd';
-
-        // Giving color to each text in sphere document.querySelector('.Sphere').style.color = color;
-
- </script>
+ 
           <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+        <script src="./index.js"></script>
 </body>
 
 </html>
