changes related to footer animation

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ Projects
 
         </section>
         <hr>
-        <section class="message">
+        <!-- <section class="message">
 
             <div class="message-container">
 
@@ -318,12 +318,26 @@ Projects
 
         </section>
 
-        <hr>
+        <hr> -->
 
         <section class="footer">
 
             <div class="greetings-container">
-
+                <div class="area" >
+            <ul class="circles">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+            </ul>
+    </div >
+                      <div class="footer-content">
                 <div class="name">
 
                     <p class="footTitle aligncenter">
@@ -331,6 +345,35 @@ Projects
                         Vinayak Shukla
 
                     </p>
+
+                </div>
+                <div class="social-profile-icons-container-enhanced">
+
+                    <div>
+
+                        <a href="https://www.linkedin.com/in/vinayak-shukla-b7319b162/"> <i
+                                class="fa fa-linkedin-square"></i></a>
+
+                    </div>
+
+                    <div>
+                        <a href="https://github.com/vinayakshukla"> <i class="fa fa-github"></i></a>
+
+                    </div>
+
+                    <div>
+
+                        <a href="mailto:vinayakshukla2000@gmail.com"> <i class="fa fa-envelope-o"></i></a>
+
+                    </div>
+                    <div>
+
+                        <a href="https://twitter.com/vinayak_shukla_?t=LqyZUcDqJbXVZbgr9wmZ0A&s=09
+                        "> <i class="fa fa-twitter-square" style=" color:skyblue"></i></a>
+
+                    </div> 
+                   
+
 
                 </div>
 
@@ -349,6 +392,7 @@ Projects
                     <img class="footer-image" src="images/foot.jpg">
 
                 </div>
+            </div>
 
             </div>
 
